--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "global": "^4.4.0",
     "hbs": "^4.1.1",
+    "nodemon": "^2.0.22",
     "punkapi-javascript-wrapper": "^1.0.2"
   }
 }
